# RedisGate

./: .env.development  .gitignore  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  JWT_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  REDIS_API.md  demo_jwt.rs  docker-compose.yml  env.development  kind-config.yaml  setup-dev.sh  start.sh  validate-setup.sh
.sqlx/: query-03ff11dbea11b88a1b47b58097493fc47c33db1022c16d919275838ba162c0b1.json  query-0fc3063ee615800e95a17514fd1a9ac8b50f0f2baaf0ed765f29410410fae587.json  query-19211a64f46e14a60476b91ca457bcc20683d0fe39f3ede400313c949b0880a9.json  query-1a3885af8e31fd86aa93d33121312a71caa139cfd7f775b8e947ebc4fb085630.json  query-1c998672d1fee6c33e8f24659ca0f134cd8b7505fcd08b8f61df0c0eddfb26f2.json  query-1d9e915bcd44fcedb07c8db5eabab02dd2d2453ed58ce9afbd0da01360040ec6.json  query-1e2a35a0c535b137b78d2edd4e7d25d37b1ebed408352c43c0c38906f259dcba.json  query-1f12478ead963120572a818242aad25993a17749d525a99b1d70e6a1f1637c3c.json  query-22e85af04ae9a843a77bfcceb3706547ddebdb54b9ae5a083e13ba0757871424.json  query-26bfdee97aa7ec2a519b34d90676b5b1a6ca56f2ec178305118789fec1483741.json  query-2a066823010f44e9964da273c53a41d76210772bd007111d5c695fa58c70fcc1.json  query-2fa59c8e7b4d5256c8ece688f665cd9ca817c6497d7ac91d136c59664aa56c75.json  query-33f9b9eac379ff57f14fc3f5345c3aa2a4e5a4d1a72fc23bf9411d1d5e4a6e47.json  query-39ed1435d8ac9416d9fc191ae6c08dfe00d302e4928e1bd2398ef4d1563df708.json  query-417ab1f25fe185cc579e5bfb6e157a5bf418a134784e239dd304622e7e870806.json  query-46faf72202a6d719815e0f1b496aa2ad65b9b23043658615f8b368e4ab2b497f.json  query-4b2f23a215baed23ffd71e46aafec71f538b5a7e214a5bb9d90e003cf6df79f9.json  query-5ce8c2c173ea3428f8e63347cd7b8a9ca5b9956fcfed788138c4d20ad9a6dddf.json  query-5e269960d01487b931aef24b1a820255f17b0e6a7cf2ad977b4edb37aa32d138.json  query-6005b7991f295261b4a55d91f0e6fdf5b1c53c622de9ab655b05d43c02681256.json  query-6d179b8aeb66af481d2b2efa338836a527638aaa1ff8914765a459b6d9672db9.json  query-6ede481117e8a9b1a6f5df1d2d763f15eefebe59186dd9841573d295dc1128fb.json  query-7046ae7f93a3d053d20986a29afd86336d7f5242f31363bf35d2359f68181e88.json  query-79b3996202c3ffd77a32e2c75fee3d4b7cd860a145430fedaaa2e3cf41bb11b6.json  query-7ae515c9bf0c45c21e009361840856577bfe6507ae3b92b988f3b1e8f5acebcc.json  query-824b286f84da55472eb3f6e2352312ad4b1fe79e530819fa629b4922676e81c0.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-a803c0cabbb917fdfceac57f2159b1cb60da3ed3c9a96dd0095ef308b277e78d.json  query-aaafeb8627967368b7c1520b364d1af720d744cc3f04e521797b47b37fc1cf20.json  query-b3004a2962007bbf48a89ccb07ff5add5742a07ff14f23bd196656bbb6dbfb63.json  query-b47fc17274400831318eeb0dfb077b95a04b3cf755ec61543d29dba160d34362.json  query-b7a5fa08e6871587c162a06f932725caa696487ef2881a5234cf18ba1d6c5887.json  query-bf92ee6904378fe6e81e66e5c009e314ee3dbebdf71cafe8c9b2c0ffbcc146c3.json  query-c61783d6738f5f5d35d45f627826aeccd84196ded4795f600ef1648a3b551c3d.json  query-c6735198b10c631b8d4d111120b9d3d670b8407c3309e398832dda84b619ccf8.json  query-cb68c46970bb3a8878fa62f0fe252ead6deebe9cc1981bb29b35ee6760fe2f94.json  query-d2536c13ac13a64d14cf67bd8c08a37bc4f443e1b1375c3ed74c7ffd724a1663.json  query-d52fe6bba1a9540f0689d995a70f76e689f30abff08cad591124c153f911a6bb.json  query-d892e8c0696e9a0c074372e82bbb5cc966e2e9f53901349d033da6efbc3fbb93.json  query-dc12cf6f9c5ef30179e5c05c7fa33d3edd3e27fb569555899a9e94330e7d369e.json  (+4 more)
docs/: local-development.md
gateway/: .dockerignore  Cargo.toml  Dockerfile
gateway/config/: default.toml
gateway/src/: config.rs  error.rs  lib.rs  main.rs  server.rs
gateway/src/handlers/: health.rs  keys.rs  mod.rs
gateway/src/middleware/: logging.rs  metrics.rs  mod.rs
gateway/src/redis/: mod.rs  pool.rs
k8s/: development.yaml
migrations/: 20250913051037_create_users_table.sql  20250913051042_create_organizations_table.sql  20250913051047_create_apikey_table.sql  20250913051052_create_redis_instances_table.sql  20250913051057_create_organization_memberships_table.sql  20250913051151_create_audit_logs_table.sql  20250914171418_make_api_key_id_nullable.sql  20250915000000_convert_api_keys_to_jwt.sql  README.md
minikube/: README.md
operator/: .dockerignore  Dockerfile
scripts/: dev-cluster-create.sh  dev-cluster-destroy.sh  dev-cluster-load.sh  dev-gateway-deploy.sh  dev-port-forward.sh  dev-redis-deploy.sh  dev-services.sh  init-db.sql  init-db.sql.deprecated  minikube-dev.sh
src/: api_models.rs  auth.rs  k8s_service.rs  k8s_tests.rs  main.rs  middleware.rs  models.rs
(+47 files in other folders)
