[package]
name = "redisgate"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "migrate", "macros", "bigdecimal", "ipnetwork"] }
rust_decimal = { version = "1.0", features = ["serde-with-str"] }
bigdecimal = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"

# Authentication and security
jsonwebtoken = "9.2"
bcrypt = "0.15"
secrecy = "0.8"
rand = "0.8"

# Validation
validator = { version = "0.18", features = ["derive"] }
lazy_static = "1.4"
regex = "1.10"



# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Config
config = "0.13"
dotenv = "0.15"

# Kubernetes client
kube = "0.87"
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Redis client
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

[dev-dependencies]
tempfile = "3.0"
