[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8.3"
hyper = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
redis = { version = "0.25", features = ["tokio-comp", "aio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
async-stream = "0.3"

# New dependencies from the second Cargo.toml
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
deadpool-redis = "0.10"
uuid = { version = "1.4", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
once_cell = "1.18"

[dev-dependencies]
tokio-test = "0.4"
